--- a/notebooks/Study_score_model.ipynb
+++ b/notebooks/Study_score_model.ipynb
@@ -128,14 +128,13 @@
     }
    ],
    "source": [
-    "merchant = spark.read.parquet('../data/curated/merchant_info.parquet')\n",
-    "merchant_pd = merchant.toPandas()\n",
-    "merchant_pd.head(2)"
+    "merchant_study_score = spark.read.parquet('../data/curated/merchant_info.parquet')\n",
+    "merchant_pd = merchant_study_score.toPandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +159,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>merchant_abn</th>\n",
-       "      <th>final_score_sum</th>\n",
+       "      <th>raw_score_sum</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -269,30 +268,30 @@
        "</div>"
       ],
       "text/plain": [
-       "      merchant_abn  final_score_sum\n",
-       "2439   64203420245       328.549793\n",
-       "2293   60956456424       324.748775\n",
-       "2698   70009327857       320.583216\n",
-       "2607   67978471888       319.177144\n",
-       "2149   57223200264       318.743034\n",
-       "3997   99291944648       318.519352\n",
-       "2446   64403598239       317.543847\n",
-       "3613   90543168331       316.094370\n",
-       "2386   63123845164       315.877854\n",
-       "2131   56779111060       315.299173\n",
-       "2763   71361928741       314.595799\n",
-       "984    31334588839       314.576134\n",
-       "2814   72472909171       313.448521\n",
-       "2894   74063123996       313.010547\n",
-       "2114   56530958295       312.627062\n",
-       "2700   70033549200       312.560187\n",
-       "2921   74553285516       312.460827\n",
-       "680    24852446429       312.172645\n",
-       "426    19492220327       312.168519\n",
-       "3590   89726005175       312.128375"
+       "      merchant_abn  raw_score_sum\n",
+       "2439   64203420245     328.549793\n",
+       "2293   60956456424     324.748775\n",
+       "2698   70009327857     320.583216\n",
+       "2607   67978471888     319.177144\n",
+       "2149   57223200264     318.743034\n",
+       "3997   99291944648     318.519352\n",
+       "2446   64403598239     317.543847\n",
+       "3613   90543168331     316.094370\n",
+       "2386   63123845164     315.877854\n",
+       "2131   56779111060     315.299173\n",
+       "2763   71361928741     314.595799\n",
+       "984    31334588839     314.576134\n",
+       "2814   72472909171     313.448521\n",
+       "2894   74063123996     313.010547\n",
+       "2114   56530958295     312.627062\n",
+       "2700   70033549200     312.560187\n",
+       "2921   74553285516     312.460827\n",
+       "680    24852446429     312.172645\n",
+       "426    19492220327     312.168519\n",
+       "3590   89726005175     312.128375"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,8 +308,8 @@
     "    sorted_col['rank'] = rank_list\n",
     "    sorted_col['percentage above the merchants'] = 1-sorted_col['rank']/(num_of_merchant+1)\n",
     "    sorted_col['z score'] = st.norm.ppf(sorted_col['percentage above the merchants'])\n",
-    "    sorted_col[col_name+'_final_score'] = sorted_col['z score']*5.75+30\n",
-    "    return sorted_col[['merchant_abn', col_name+'_final_score']]\n",
+    "    sorted_col[col_name+'_raw_score'] = sorted_col['z score']*5.75+30\n",
+    "    return sorted_col[['merchant_abn', col_name+'_raw_score']]\n",
     "\n",
     "numeric_features_list = ['count_of_bigorder', 'Avg_amount_monthly', 'Avg_count_monthly', 'Order_avg_value', \n",
     "    'avg_prob_fraud_cus', 'num_of_fraud', 'count_cus_per_mon', 'fix_cus_num', 'avg_income_percentage', \n",
@@ -319,17 +318,151 @@
     "merchant_pd[['num_of_fraud']] = -abs(merchant_pd[['num_of_fraud']])\n",
     "merchant_pd[['avg_prob_fraud_cus']] = -abs(merchant_pd[['avg_prob_fraud_cus']])\n",
     "\n",
-    "final_score_df = merchant_pd[['merchant_abn']]\n",
+    "raw_score_df = merchant_pd[['merchant_abn']]\n",
     "for feature in numeric_features_list:\n",
-    "    feature_final_score = convert_to_score(merchant_pd, feature)\n",
-    "    final_score_df = pd.merge(final_score_df, feature_final_score, how='inner', on = 'merchant_abn')\n",
+    "    feature_raw_score = convert_to_score(merchant_pd, feature)\n",
+    "    raw_score_df = pd.merge(raw_score_df, feature_raw_score, how='inner', on = 'merchant_abn')\n",
     "\n",
     "\n",
     "#convert_to_score(merchant_pd, 'count_of_bigorder')\n",
-    "#final_score_df[['final_score_sum']] = sum[final_score_df[1:]]\n",
-    "final_score_df['final_score_sum']= final_score_df.iloc[:, 1:-1].sum(axis=1)\n",
-    "final_score_df[['merchant_abn', 'final_score_sum']].sort_values(by='final_score_sum', ascending=False).head(20)"
+    "#raw_score_df[['raw_score_sum']] = sum[raw_score_df[1:]]\n",
+    "raw_score_df['raw_score_sum']= raw_score_df.iloc[:, 1:-1].sum(axis=1)\n",
+    "raw_score_df[['merchant_abn', 'raw_score_sum']].sort_values(by='raw_score_sum', ascending=False).head(20)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>merchant_abn</th>\n",
+       "      <th>Avg_amount_monthly_final_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>833</th>\n",
+       "      <td>28057731482</td>\n",
+       "      <td>54.377906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2446</th>\n",
+       "      <td>64403598239</td>\n",
+       "      <td>53.046933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2293</th>\n",
+       "      <td>60956456424</td>\n",
+       "      <td>52.236447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2607</th>\n",
+       "      <td>67978471888</td>\n",
+       "      <td>51.645608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1802</th>\n",
+       "      <td>49322182190</td>\n",
+       "      <td>51.177635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1905</th>\n",
+       "      <td>51561881468</td>\n",
+       "      <td>8.822365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1926</th>\n",
+       "      <td>52351039440</td>\n",
+       "      <td>8.354392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1289</th>\n",
+       "      <td>37802138328</td>\n",
+       "      <td>7.763553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4012</th>\n",
+       "      <td>99785979138</td>\n",
+       "      <td>6.953067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>912</th>\n",
+       "      <td>29681526553</td>\n",
+       "      <td>5.622094</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4026 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      merchant_abn  Avg_amount_monthly_final_score\n",
+       "833    28057731482                       54.377906\n",
+       "2446   64403598239                       53.046933\n",
+       "2293   60956456424                       52.236447\n",
+       "2607   67978471888                       51.645608\n",
+       "1802   49322182190                       51.177635\n",
+       "...            ...                             ...\n",
+       "1905   51561881468                        8.822365\n",
+       "1926   52351039440                        8.354392\n",
+       "1289   37802138328                        7.763553\n",
+       "4012   99785979138                        6.953067\n",
+       "912    29681526553                        5.622094\n",
+       "\n",
+       "[4026 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def convert_to_score(table_name, col_name):\n",
+    "    sorted_col = table_name[['merchant_abn', col_name]].sort_values(by=col_name, ascending=False)\n",
+    "    num_of_merchant = len(sorted_col)\n",
+    "    rank_list = [i for i in range(1, num_of_merchant+1)]\n",
+    "    sorted_col['rank'] = rank_list\n",
+    "    sorted_col['percentage above the merchants'] = 1-sorted_col['rank']/(num_of_merchant+1)\n",
+    "    sorted_col['z score'] = st.norm.ppf(sorted_col['percentage above the merchants'])\n",
+    "    sorted_col[col_name+'_raw_score'] = sorted_col['z score']*7+30\n",
+    "    return sorted_col[['merchant_abn', col_name+'_raw_score']]\n",
+    "\n",
+    "convert_to_score(merchant_pd, 'Avg_amount_monthly')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
