change the study score model to model file

--- a/models/Study_score_model.ipynb
+++ b/models/Study_score_model.ipynb
@@ -2,9 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/09/29 17:38:10 WARN Utils: Your hostname, Macintosh.local resolves to a loopback address: 127.0.0.1; using 10.12.230.91 instead (on interface en0)\n",
+      "22/09/29 17:38:10 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/09/29 17:38:10 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/09/29 17:38:11 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "22/09/29 17:38:11 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
+      "22/09/29 17:38:11 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
+      "22/09/29 17:38:11 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n",
+      "22/09/29 17:38:11 WARN Utils: Service 'SparkUI' could not bind on port 4044. Attempting port 4045.\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
@@ -22,111 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Store_type</th>\n",
-       "      <th>Revenue_levels</th>\n",
-       "      <th>Take_rate</th>\n",
-       "      <th>count_of_bigorder</th>\n",
-       "      <th>Avg_amount_monthly</th>\n",
-       "      <th>Avg_count_monthly</th>\n",
-       "      <th>Order_avg_value</th>\n",
-       "      <th>postcode</th>\n",
-       "      <th>avg_prob_fraud_cus</th>\n",
-       "      <th>num_of_fraud</th>\n",
-       "      <th>count_cus_per_mon</th>\n",
-       "      <th>merchant_abn</th>\n",
-       "      <th>fix_cus_num</th>\n",
-       "      <th>avg_income_percentage</th>\n",
-       "      <th>avg_age_percentage</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>furniture, home furnishings and equipment shop...</td>\n",
-       "      <td>e</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>28650.29</td>\n",
-       "      <td>159.94</td>\n",
-       "      <td>179.13</td>\n",
-       "      <td>5582</td>\n",
-       "      <td>13.103379</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>150.11</td>\n",
-       "      <td>10023283211</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.146046</td>\n",
-       "      <td>0.488653</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>cable, satellite, and other pay television and...</td>\n",
-       "      <td>b</td>\n",
-       "      <td>4.22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3741.36</td>\n",
-       "      <td>143.50</td>\n",
-       "      <td>26.07</td>\n",
-       "      <td>6438</td>\n",
-       "      <td>13.235562</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>135.56</td>\n",
-       "      <td>10142254217</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.304018</td>\n",
-       "      <td>0.737510</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                          Store_type Revenue_levels Take_rate  \\\n",
-       "0  furniture, home furnishings and equipment shop...              e      0.18   \n",
-       "1  cable, satellite, and other pay television and...              b      4.22   \n",
-       "\n",
-       "   count_of_bigorder  Avg_amount_monthly  Avg_count_monthly  Order_avg_value  \\\n",
-       "0                  0            28650.29             159.94           179.13   \n",
-       "1                  0             3741.36             143.50            26.07   \n",
-       "\n",
-       "  postcode  avg_prob_fraud_cus  num_of_fraud  count_cus_per_mon  merchant_abn  \\\n",
-       "0     5582           13.103379           8.0             150.11   10023283211   \n",
-       "1     6438           13.235562          12.0             135.56   10142254217   \n",
-       "\n",
-       "   fix_cus_num  avg_income_percentage  avg_age_percentage  \n",
-       "0            0               0.146046            0.488653  \n",
-       "1            0               0.304018            0.737510  "
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "merchant_study_score = spark.read.parquet('../data/curated/merchant_info.parquet')\n",
     "merchant_pd = merchant_study_score.toPandas()"
@@ -134,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +218,7 @@
        "3590   89726005175     312.128375"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +284,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>merchant_abn</th>\n",
-       "      <th>Avg_amount_monthly_final_score</th>\n",
+       "      <th>Avg_amount_monthly_raw_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -422,23 +349,23 @@
        "</div>"
       ],
       "text/plain": [
-       "      merchant_abn  Avg_amount_monthly_final_score\n",
-       "833    28057731482                       54.377906\n",
-       "2446   64403598239                       53.046933\n",
-       "2293   60956456424                       52.236447\n",
-       "2607   67978471888                       51.645608\n",
-       "1802   49322182190                       51.177635\n",
-       "...            ...                             ...\n",
-       "1905   51561881468                        8.822365\n",
-       "1926   52351039440                        8.354392\n",
-       "1289   37802138328                        7.763553\n",
-       "4012   99785979138                        6.953067\n",
-       "912    29681526553                        5.622094\n",
+       "      merchant_abn  Avg_amount_monthly_raw_score\n",
+       "833    28057731482                     54.377906\n",
+       "2446   64403598239                     53.046933\n",
+       "2293   60956456424                     52.236447\n",
+       "2607   67978471888                     51.645608\n",
+       "1802   49322182190                     51.177635\n",
+       "...            ...                           ...\n",
+       "1905   51561881468                      8.822365\n",
+       "1926   52351039440                      8.354392\n",
+       "1289   37802138328                      7.763553\n",
+       "4012   99785979138                      6.953067\n",
+       "912    29681526553                      5.622094\n",
        "\n",
        "[4026 rows x 2 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
