--- a/notebooks/final_transaction.ipynb
+++ b/notebooks/final_transaction.ipynb
@@ -6,28 +6,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/09/16 14:51:54 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.174.166 instead (on interface en0)\n",
-      "22/09/16 14:51:54 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "22/10/01 13:22:23 WARN Utils: Your hostname, Zhangs-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.12.19.38 instead (on interface en0)\n",
+      "22/10/01 13:22:23 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/10/01 13:22:24 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/09/16 14:51:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "22/09/16 14:51:56 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "22/09/16 14:51:56 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
      ]
     }
    ],
@@ -249,13 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "22/10/01 13:22:40 WARN MemoryManager: Total allocation exceeds 95.00% (956,301,300 bytes) of heap memory\n",
+      "Scaling row group sizes to 89.06% for 8 writers\n",
       "                                                                                \r"
      ]
     }
@@ -266,47 +255,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 130:>                                                        (0 + 8) / 9]\r"
+      "22/10/01 13:23:12 WARN MemoryManager: Total allocation exceeds 95.00% (956,301,300 bytes) of heap memory\n",
+      "Scaling row group sizes to 89.06% for 8 writers\n",
+      "22/10/01 13:23:12 WARN MemoryManager: Total allocation exceeds 95.00% (956,301,300 bytes) of heap memory\n",
+      "Scaling row group sizes to 89.06% for 8 writers\n",
+      "22/10/01 13:23:13 WARN MemoryManager: Total allocation exceeds 95.00% (956,301,300 bytes) of heap memory\n",
+      "Scaling row group sizes to 89.06% for 8 writers\n",
+      "22/10/01 13:23:15 WARN MemoryManager: Total allocation exceeds 95.00% (956,301,300 bytes) of heap memory\n",
+      "Scaling row group sizes to 89.06% for 8 writers\n",
+      "                                                                                \r"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22/09/16 14:53:05 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
-      "Scaling row group sizes to 96.54% for 7 writers\n",
-      "22/09/16 14:53:05 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
-      "Scaling row group sizes to 84.47% for 8 writers\n",
-      "22/09/16 14:53:09 WARN MemoryManager: Total allocation exceeds 95.00% (906,992,014 bytes) of heap memory\n",
-      "Scaling row group sizes to 96.54% for 7 writers\n"
-     ]
-    },
+    }
+   ],
+   "source": [
+    "transaction = ori_transaction.join(consumer_final, ori_transaction.user_id == consumer_final.user_id).drop(consumer_final.user_id)\n",
+    "transaction = transaction.sort(transaction.user_id)\n",
+    "\n",
+    "transaction.write.parquet(f\"../data/curated/final_transaction.parquet\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "                                                                                \r"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border='1'>\n",
+       "<tr><th>user_id</th><th>merchant_abn</th><th>dollar_value</th><th>order_datetime</th><th>whether_bigorder</th><th>postcode</th><th>average_prob_con</th><th>whether_fraud</th></tr>\n",
+       "<tr><td>1</td><td>49891706470</td><td>15.730079162841406</td><td>2022-06-21</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>49891706470</td><td>6.089109666984375</td><td>2021-03-30</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>49891706470</td><td>49.7937996752238</td><td>2022-05-29</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>28510201393</td><td>587.4024261414739</td><td>2021-09-24</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>49891706470</td><td>5.904950671999753</td><td>2021-03-04</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>49891706470</td><td>29.031125253031277</td><td>2021-09-11</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>49891706470</td><td>31.72414306182016</td><td>2021-11-11</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>81583941068</td><td>60.355511340797705</td><td>2021-08-24</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>46654841462</td><td>18.503827542784197</td><td>2022-09-03</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>46007761675</td><td>100.22461641821623</td><td>2022-10-24</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>83781478969</td><td>11.158164658064516</td><td>2021-10-29</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>49891706470</td><td>9.8536077372169</td><td>2021-04-20</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>49891706470</td><td>8.575435297903415</td><td>2021-08-31</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>49891706470</td><td>53.459655624285546</td><td>2021-10-16</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>49891706470</td><td>46.15699347673238</td><td>2021-11-04</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>60654402457</td><td>49.10112294851568</td><td>2022-04-27</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>62170730910</td><td>100.92907597492842</td><td>2021-10-19</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>86662713230</td><td>52.76732812907132</td><td>2021-09-09</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>90568944804</td><td>811.416129781905</td><td>2022-02-24</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "<tr><td>1</td><td>27093785141</td><td>366.23397381294154</td><td>2021-11-17</td><td>0</td><td>6935</td><td>9.805431136520959</td><td>0</td></tr>\n",
+       "</table>\n",
+       "only showing top 20 rows\n"
+      ],
+      "text/plain": [
+       "+-------+------------+------------------+--------------+----------------+--------+-----------------+-------------+\n",
+       "|user_id|merchant_abn|      dollar_value|order_datetime|whether_bigorder|postcode| average_prob_con|whether_fraud|\n",
+       "+-------+------------+------------------+--------------+----------------+--------+-----------------+-------------+\n",
+       "|      1| 49891706470|15.730079162841406|    2022-06-21|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 49891706470| 6.089109666984375|    2021-03-30|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 49891706470|  49.7937996752238|    2022-05-29|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 28510201393| 587.4024261414739|    2021-09-24|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 49891706470| 5.904950671999753|    2021-03-04|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 49891706470|29.031125253031277|    2021-09-11|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 49891706470| 31.72414306182016|    2021-11-11|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 81583941068|60.355511340797705|    2021-08-24|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 46654841462|18.503827542784197|    2022-09-03|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 46007761675|100.22461641821623|    2022-10-24|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 83781478969|11.158164658064516|    2021-10-29|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 49891706470|   9.8536077372169|    2021-04-20|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 49891706470| 8.575435297903415|    2021-08-31|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 49891706470|53.459655624285546|    2021-10-16|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 49891706470| 46.15699347673238|    2021-11-04|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 60654402457| 49.10112294851568|    2022-04-27|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 62170730910|100.92907597492842|    2021-10-19|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 86662713230| 52.76732812907132|    2021-09-09|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 90568944804|  811.416129781905|    2022-02-24|               0|    6935|9.805431136520959|            0|\n",
+       "|      1| 27093785141|366.23397381294154|    2021-11-17|               0|    6935|9.805431136520959|            0|\n",
+       "+-------+------------+------------------+--------------+----------------+--------+-----------------+-------------+\n",
+       "only showing top 20 rows"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "transaction = ori_transaction.join(consumer_final, ori_transaction.user_id == consumer_final.user_id,'outer').drop(consumer_final.user_id)\n",
-    "transaction = transaction.sort(transaction.user_id)\n",
-    "\n",
-    "transaction.write.parquet(f\"../data/curated/final_transaction.parquet\")\n"
+    "transaction"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('ads')",
+   "display_name": "Python 3.8.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -325,7 +380,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6e45bdfcba1031802b2f7a315f02d536e51553942a60e4ee4be74aec82814bfa"
+    "hash": "80d22fffded80c5bd95a70be935aa0a7eaf27817ba3bc2982545179d76b51d91"
    }
   }
  },
