updated geovisualisation code

--- a/notebooks/geovisualisation.ipynb
+++ b/notebooks/geovisualisation.ipynb
@@ -9,12 +9,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/09/19 09:44:59 WARN Utils: Your hostname, SerennoMacBook-Air.local resolves to a loopback address: 127.0.0.1; using 172.16.5.95 instead (on interface en0)\n",
-      "22/09/19 09:44:59 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "22/09/19 09:45:00 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/10/04 14:55:31 WARN Utils: Your hostname, SerennoMacBook-Air.local resolves to a loopback address: 127.0.0.1; using 10.13.233.200 instead (on interface en0)\n",
+      "22/10/04 14:55:31 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/10/04 14:55:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "22/10/04 14:55:34 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -33,41 +34,21 @@
     "    .config(\"spark.sql.parquet.cacheMetadata\", \"true\")\n",
     "    .config(\"spark.sql.session.timeZone\", \"Etc/UTC\")\n",
     "    .getOrCreate()\n",
+    "    \n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('SA2_CODE21', 'string'),\n",
-       " ('SA2_NAME21', 'string'),\n",
-       " ('geometry', 'string'),\n",
-       " ('income_percentage', 'double'),\n",
-       " ('age_percentage', 'double'),\n",
-       " ('SA2_NAME_2021', 'string'),\n",
-       " ('RATIO_FROM_TO', 'string'),\n",
-       " ('postcode', 'string'),\n",
-       " ('avg_lat', 'double'),\n",
-       " ('avg_long', 'double'),\n",
-       " ('count_of_bigorder', 'bigint'),\n",
-       " ('Avg_amount_monthly', 'double'),\n",
-       " ('Avg_count_monthly', 'double'),\n",
-       " ('Order_avg_value', 'double'),\n",
-       " ('avg_prob_fraud_cus', 'double'),\n",
-       " ('num_of_fraud', 'double'),\n",
-       " ('count_cus_per_mon', 'double'),\n",
-       " ('fix_cus_prob', 'double'),\n",
-       " ('merchant_abn', 'bigint')]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
